fix(table): make col headers respect component's initial width
Also make sure that their titles can truncate when
column header size has changed.

--- a/src/components/table/partial-styles/header-component.scss
+++ b/src/components/table/partial-styles/header-component.scss
@@ -2,8 +2,16 @@
     width: 100%;
     display: flex;
     align-items: center;
+    margin-right: pxToRem(20);
 }
+
 .title-component-text {
     @include truncate-text();
     flex-grow: 1;
+    flex-shrink: 1;
+    min-width: 0;
+}
+
+.title-component-slot  {
+    flex-shrink: 0;
 }
